--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,11 +49,8 @@ about:
     methods are included.  The cpt.mean(), cpt.var(), cpt.meanvar() functions should
     be your first point of call.
   license_family: GPL
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
 
 extra:
   recipe-maintainers:
     - conda-forge/r
-    - dpryan79
-    - johanneskoester
-    - bgruening
-    - daler
